[gd_scene load_steps=2 format=3 uid="uid://vjo134vb7cks"]

[ext_resource type="Script" path="res://days/day1-2/Line2.gd" id="1_xv8lk"]

[node name="Line2" type="Node2D" node_paths=PackedStringArray("timer")]
script = ExtResource("1_xv8lk")
timer = NodePath("Timer")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.4

[node name="InsaneoStyle" type="Timer" parent="."]
wait_time = 0.2

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="InsaneoStyle" to="." method="_go_insaneo_style"]
